crates/math-core/tests/snapshots/conversion_test__mathchoice_unused_arg_not_typeset.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathchoice{\\frac}{x}{y}{z}"
---
<math>
    <mi>x</mi>
</math>
