crates/math-core/tests/snapshots/conversion_test__mathclose.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathclose(+x"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">(</mo>
    <mo>+</mo>
    <mi>x</mi>
</math>
