crates/math-core/tests/snapshots/conversion_test__mathit_of_max.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathit{ab \\max \\alpha\\beta}"
---
<math>
    <mrow>
        <mrow><mspace/><mi>𝑎𝑏</mi></mrow>
        <mspace width="0.1667em"/>
        <mrow>
            <mrow><mspace/><mi>max</mi></mrow>
            <mo lspace="0.1667em">&ApplyFunction;</mo>
            <mrow><mspace/><mi>𝛼𝛽</mi></mrow>
        </mrow>
    </mrow>
</math>
