crates/math-core/tests/snapshots/conversion_test__mathit_of_operatorname.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathit{a\\operatorname{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mo lspace="0.1667em">&InvisibleTimes;</mo>
        <mrow>
            <mrow><mspace/><mi>bc</mi></mrow>
            <mo lspace="0.1667em">&ApplyFunction;</mo>
            <mi>𝑑</mi>
        </mrow>
    </mrow>
</math>
