crates/math-core/tests/snapshots/conversion_test__mathop.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a\\mathop{+}b"
---
<math>
    <mi>a</mi>
    <mo stretchy="false" lspace="0.1667em" rspace="0.1667em">+</mo>
    <mi>b</mi>
</math>
